fix/join-member-name-list-with-image

--- a/app/assets/stylesheets/public/events.scss
+++ b/app/assets/stylesheets/public/events.scss
@@ -294,7 +294,7 @@
       }
       .image-style{
         text-decoration: none;
-        margin-right: 10px;
+        margin: 0 10px 0 0;
         display: inline-block;
         .icon_mini{
           width: 50px;
