--- a/app/views/public/events/show.html.haml
+++ b/app/views/public/events/show.html.haml
@@ -70,9 +70,14 @@
               %tr
                 %th{scope:"row"} 参加メンバー
                 %td
-                  - @join_members.each do |member|
-                    🎵
-                    = member.name
+                  - @join_members.each do |customer|
+                    = link_to public_customer_path(customer), class: 'image-style', data: { 'turbolinks': false } do
+                      - if customer.profile_image.present?
+                        = image_tag customer.profile_image, class: "icon_mini"
+                      - else
+                        = image_tag 'no_image', class: "icon_mini"
+                      = customer.name
+                    %br
                     %br
               %tr
                 %th{scope:"row"} 成立楽曲数
