feature/event-show-url-comment

--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -22,7 +22,9 @@
  @import '@fortawesome/fontawesome-free/scss/v4-shims';
 
 body {
-font-family: "Source Sans Pro", "Hiragino Kaku Gothic ProN", Meiryo, Arial, sans-serif;
+  font-family: "Source Sans Pro", "Hiragino Kaku Gothic ProN", Meiryo, Arial, sans-serif;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
 }
 
 .list-style-none li{
