--- a/app/assets/stylesheets/public/events.scss
+++ b/app/assets/stylesheets/public/events.scss
@@ -278,7 +278,9 @@
       }
     }
     .event-songs-join-form{
-      padding-right: 15px;
+      border: 1px solid black;
+      border-radius: 10px;
+      padding: 15px;
       max-height: 300px;
       overflow: scroll;
     }
