--- a/app/views/public/events/show.html.haml
+++ b/app/views/public/events/show.html.haml
@@ -143,32 +143,33 @@
               %tr
                 %th{scope:"row"} 参加フォーム
                 %td
-                  #event-songs.event-songs-join-form
+                  #event-songs
                     -if @event.event_end_time > Time.now
                       📢参加したい曲のパート（全て）を選んで下部の【参加する】ボタンを押して下さい
                       %br
                       📢参加ボタンを押すと、上記【楽曲】のパート内にアイコンが表示されます
                       %br
-                      📢スクロールで全楽曲が確認できます
-                      %br
                       .text-red
                         ※このイベントは【#{@community.name}】に参加している必要があります。
                       %hr
+                      📢スクロールで全楽曲が確認できます
+                      %br
                       = form_tag(public_event_join_path(@event), method: :post,  onSubmit: "return CheckJoin()") do
-                        - @event.songs.each do |song|
-                          .join-part-list
-                            .join-part-song-name
-                              =song.song_name
-                            %hr
-                              = collection_check_boxes(:event, :join_part_ids, song.join_parts, :id, :join_part_name, checked:false) do |part|
-                                = part.label do
-                                  .song-name
-                                    = part.check_box
-                                    = part.text
-                                  ☝️参加したいパートにチェック🎵
-                                  %hr
-                                %br
-                                = hidden_field_tag :event_id, @event.id
+                        .event-songs-join-form
+                          - @event.songs.each do |song|
+                            .join-part-list
+                              .join-part-song-name
+                                =song.song_name
+                              %hr
+                                = collection_check_boxes(:event, :join_part_ids, song.join_parts, :id, :join_part_name, checked:false) do |part|
+                                  = part.label do
+                                    .song-name
+                                      = part.check_box
+                                      = part.text
+                                    ☝️参加したいパートにチェック
+                                    %hr
+                                  %br
+                                  = hidden_field_tag :event_id, @event.id
                         %input{type: "submit", value: "参加する", class: "join-part-btn", confirm: "こちらのイベントに参加をします。よろしいですか？", data: {'disable_with': '送信中...', 'turbolinks': false}}
                     - else
                       こちらのイベントは終了致しました。
