fix/event-show-border

--- a/app/views/public/events/show.html.haml
+++ b/app/views/public/events/show.html.haml
@@ -98,7 +98,7 @@
               %tr
                 %th{scope:"row"} 成立楽曲
                 %td
-                  .complete-songs-list
+                  .complete.complete-songs-list
                     - @complete_songs.each do |song|
                       🎵
                       = song.song_name
