--- a/app/assets/stylesheets/public/events.scss
+++ b/app/assets/stylesheets/public/events.scss
@@ -219,7 +219,9 @@
       width: 90%;
     }
     .join-member-list{
-      padding-right: 15px;
+      border: 1px solid black;
+      border-radius: 10px;
+      padding: 15px;
       max-height: 300px;
       overflow: scroll;
     }
@@ -278,7 +280,7 @@
       }
     }
     .event-songs-join-form{
-      border: 1px solid black;
+      border: 5px solid #5c87a6;
       border-radius: 10px;
       padding: 15px;
       max-height: 300px;
