--- a/app/views/public/events/_join_part_fields.html.haml
+++ b/app/views/public/events/_join_part_fields.html.haml
@@ -3,4 +3,4 @@
     = f.hidden_field :_destroy
     = f.text_field :join_part_name, placeholder: "募集パート名を入力します"
   .field
-    = link_to_remove_association 'パートを削除', f, class: 'btn btn-danger js-join-part-remove-btn'
+    = link_to_remove_association 'パートを削除', f, class: 'btn btn-danger js-join-part-remove-btn', data: { 'turbolinks': false, confirm: 'こちらのパートを削除します。よろしいですか？' }
