feature/csv-download

--- a/app/assets/stylesheets/public/events.scss
+++ b/app/assets/stylesheets/public/events.scss
@@ -484,6 +484,10 @@
         padding: 10px;
       }
     }
+    .event-introduction{
+      width:90%;
+      height: 300px;
+    }
   }
   .event-btn{
     position: fixed;
