--- a/app/views/public/activities/_form.html.haml
+++ b/app/views/public/activities/_form.html.haml
@@ -25,25 +25,33 @@
             %td
               = f.text_field :url_comment, placeholder: "URLの説明を記入します", class: 'form-control'
           %tr
-            %th{scope:"row"} 活動報告「タイトル」
+            %th{scope:"row"}
+              活動報告「タイトル」
+              %i.text-red
+                (必須)
             %td
               = f.text_field :title, class: 'form-control'
-              %span.text-red (必須)
           %tr
-            %th{scope:"row"} やって良かった事
+            %th{scope:"row"}
+              やって良かった事
+              %i.text-red
+                (必須)
             %td
               = f.text_field :keep, class: 'form-control'
-              %span.text-red (必須)
           %tr
-            %th{scope:"row"} 失敗した事
+            %th{scope:"row"}
+              失敗した事
+              %i.text-red
+                (必須)
             %td
               = f.text_field :problem, class: 'form-control'
-              %span.text-red (必須)
           %tr
-            %th{scope:"row"} 次回挑戦したい事
+            %th{scope:"row"}
+              次回挑戦したい事
+              %i.text-red
+                (必須)
             %td
               = f.text_field :try, class: 'form-control'
-              %span.text-red (必須)
           %tr
             %th{scope:"row"} 活動報告「詳細」
             %td
