--- a/app/views/public/comments/create.js.erb
+++ b/app/views/public/comments/create.js.erb
@@ -1,3 +1,3 @@
-$("#activity-comment-asy").html("<%= j(render 'public/comments/comments', activity: @activity, comment: @comment) %>");
-$("#got-comment-count").html("<%= @activity.comments.count %>")
+$("#activity-comment-asy").html("<%= j(render 'public/comments/comments', activity: @activity) %>");
+$("#got-comment-count").html("<%= @activity.comments.count %>");
 $("#input_comment").val('');
