--- a/app/views/public/comments/destroy.js.erb
+++ b/app/views/public/comments/destroy.js.erb
@@ -1,2 +1,2 @@
-$("#activity-comment-asy").html("<%= j(render 'public/comments/comments', activity: @activity, comment: @comment) %>");
-$("#got-comment-count").html("<%= @activity.comments.count %>")
+$("#activity-comment-asy").html("<%= j(render 'public/comments/comments', activity: @activity) %>");
+$("#got-comment-count").html("<%= @activity.comments.count %>");
